Fixed layout issues when loading in new dataset. Layout fix when shrinking page back after deleting columns.

--- a/coda-prototype/css/style.css
+++ b/coda-prototype/css/style.css
@@ -57,8 +57,8 @@ SOFTWARE.
 }
 
 .message-text div{
-  width: 284px !important;
-  max-width: 284px;
+  width: 384px !important;
+  max-width: 384px;
 }
 
 .active-scheme > div{
